<resources>
    <string name="app_name">Jale!</string>
    <string name="btnlogin">Login</string>
    <string name="btnsing">Sign In</string>
    <string name="email">Email</string>
    <string name="strpassword">Password</string>
    <string name="stror">Or</string>
    <string name="strjale">Join the Jale Talent Network and find out about your next job or talent search opportunity.</string>
    <string name="strname">Name</string>
    <string name="str_errorpass">Passwords do not match</string>
    <string name="str_errorcaracteres">Min 6 characters</string>
    <string name="str_errordatos">Incomplete data</string>
    <string name="strworker">Talent looking for work</string>
    <string name="strcompany">Talent scout</string>
    <string name="strwhatru">What are you?</string>
    <string name="stremprender">Entrepreneur looking for support</string>
    <string name="strage">Age</string>
    <string name="strubi">Ubication</string>
    <string name="strocupation">Occupation</string>
    <string name="strpreguntatalento">What talent do you have? Describe your talent.</string>
    <string name="strtrajectory">Tell us your trajectory.</string>
    <string name="strtaghabilities">Tags of your skills</string>
    <string name="strcompanyreg">Company</string>
    <string name="strdescribe">Describe yourself</string>
    <string name="strtagsearch">Tag the skills you are looking for</string>
    <string name="strhome">Home</string>
    <string name="strsearch">Search</string>
    <string name="strmessage">Message</string>
    <string name="strprofile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stroccupation">Occupation</string>
    <string name="strtrajectoryprof">Trajectory</string>
    <string name="strTalentdescribe">Description</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="strconfig">Configuration</string>
    <string name="strexit">Log out</string>
    <string name="strabout">About</string>
    <string name="title_activity_accountmanager">accountmanager</string>
    <string name="straccount">Account</string>
    <string name="strdocs">Documents</string>
    <string name="strsocial">Social</string>
    <string name="stradddoc">Documents</string>
    <string name="strfilename">File name</string>
    <string name="strselectfile">Select File</string>
    <string name="strrecommendations">Recommendations</string>
</resources>