<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/strhome" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/strsearch" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_sms_24"
        android:title="@string/strmessage" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/strmessage" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/strprofile" />

</menu>