<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <TextView
        android:background="?attr/backgroundColor"
        android:textStyle="bold"
        android:fontFamily="@font/sansjale"
        android:id="@+id/title"
        android:text="Registro"
        android:textSize="32dp"
        android:padding="16dp"
        android:textColor="?attr/primaryTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:padding="16dp"
        android:id="@+id/lnperfil"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/ivprofile"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="100dp"
        android:layout_width="150dp"
        android:layout_height="150dp">
        <ImageView
            android:src="@drawable/ic__45_businessman"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>
        <LinearLayout
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
            android:fontFamily="@font/sansjale"
            android:theme="@style/MyEditTextTheme"
            android:id="@+id/etregname"
            android:textColorHint="?attr/secondaryTextColor"
            android:hint="@string/strname"
            android:textColor="?attr/primaryTextColor"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:maxLength="2"
            android:inputType="number"
            android:fontFamily="@font/sansjale"
            android:theme="@style/MyEditTextTheme"
            android:id="@+id/etregage"
            android:textColorHint="?attr/secondaryTextColor"
            android:hint="@string/strage"
            android:textColor="?attr/primaryTextColor"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <EditText
                android:inputType="text"
                android:fontFamily="@font/sansjale"
                android:theme="@style/MyEditTextTheme"
                android:id="@+id/etregubi"
                android:textColorHint="?attr/secondaryTextColor"
                android:hint="@string/strubi"
                android:textColor="?attr/primaryTextColor"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <com.tiper.MaterialSpinner
        app:boxStrokeColor="?attr/backgroundCardColor"
        android:fontFamily="@font/sansjale"
        android:textColorHint="?attr/secondaryTextColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_margin="16dp"
        android:textSize="6dp"
        android:textColor="?attr/primaryTextColor"
        app:hintTextColor="?attr/secondaryTextColor"
        android:hint="@string/strwhatru"
        android:layout_below="@+id/lnperfil"
        android:id="@+id/spinnerpersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spinnerMode="dialog"/>
    <ScrollView
        android:id="@+id/svreg"
        android:padding="16dp"
        android:layout_below="@+id/spinnerpersona"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <LinearLayout
           android:visibility="invisible"
           android:orientation="vertical"
           android:id="@+id/lntalento"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edocupationTalent"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strocupation"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edquestionTalent"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strpreguntatalento"
               android:inputType="textCapSentences|textMultiLine"
               android:maxLength="2000"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edtrajectoryTalent"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strtrajectory"
               android:inputType="textCapSentences|textMultiLine"
               android:maxLength="2000"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <mabbas007.tagsedittext.TagsEditText
               app:tagsPaddingBottom="5dp"
               app:tagsPaddingLeft="5dp"
               app:tagsPaddingRight="5dp"
               app:tagsPaddingTop="5dp"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strtaghabilities"
               android:textColor="?attr/primaryTextColor"
               android:fontFamily="@font/sansjale"
               android:layout_marginBottom="16dp"
               android:id="@+id/tagsEditTextHabilities"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:allowSpaceInTag="true"
               app:tagsCloseImageRight="@drawable/tag_close"
               app:tagsBackground="?attr/backgroundCardColor2"
               app:tagsTextColor="?attr/cardTextColor"
               app:tagsTextSize="@dimen/defaultTagsTextSize"
               app:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"/>


       </LinearLayout>
       <LinearLayout
           android:visibility="invisible"
           android:orientation="vertical"
           android:id="@+id/lnempresa"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edocupationBuisnes"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strocupation"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edcompanyBuisnes"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strcompanyreg"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edregdescribe"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strdescribe"
               android:inputType="textCapSentences|textMultiLine"
               android:maxLength="2000"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edtrajectoryBuisnes"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strtrajectory"
               android:inputType="textCapSentences|textMultiLine"
               android:maxLength="2000"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <mabbas007.tagsedittext.TagsEditText
               app:tagsPaddingBottom="5dp"
               app:tagsPaddingLeft="5dp"
               app:tagsPaddingRight="5dp"
               app:tagsPaddingTop="5dp"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strtaghabilities"
               android:textColor="?attr/primaryTextColor"
               android:fontFamily="@font/sansjale"
               android:layout_marginBottom="16dp"
               android:id="@+id/tagsEditTextSearch"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:allowSpaceInTag="true"
               app:tagsCloseImageRight="@drawable/tag_close"
               app:tagsBackground="?attr/backgroundCardColor2"
               app:tagsTextColor="?attr/cardTextColor"
               app:tagsTextSize="@dimen/defaultTagsTextSize"
               app:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"/>

       </LinearLayout>
       <LinearLayout
           android:visibility="invisible"
           android:orientation="vertical"
           android:id="@+id/lnespectador"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:layout_marginBottom="16dp"
               android:fontFamily="@font/sansjale"
               android:theme="@style/MyEditTextTheme"
               android:id="@+id/edocupationEspectador"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strocupation"
               android:textColor="?attr/primaryTextColor"
               android:textSize="16sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <mabbas007.tagsedittext.TagsEditText
               app:tagsPaddingBottom="5dp"
               app:tagsPaddingLeft="5dp"
               app:tagsPaddingRight="5dp"
               app:tagsPaddingTop="5dp"
               android:textColorHint="?attr/secondaryTextColor"
               android:hint="@string/strtagsearch"
               android:textColor="?attr/primaryTextColor"
               android:fontFamily="@font/sansjale"
               android:layout_marginBottom="16dp"
               android:id="@+id/tagsEditTextInteres"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:allowSpaceInTag="true"
               app:tagsCloseImageRight="@drawable/tag_close"
               app:tagsBackground="?attr/backgroundCardColor2"
               app:tagsTextColor="?attr/cardTextColor"
               app:tagsTextSize="@dimen/defaultTagsTextSize"
               app:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"/>

       </LinearLayout>
   </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="#00000000"
        android:layout_margin="16dp"
        app:cardCornerRadius="100dp"
        android:elevation="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="75dp"
        android:layout_height="50dp">
        <com.github.mmin18.widget.RealtimeBlurView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:realtimeBlurRadius="7dp"
            app:realtimeOverlayColor="?attr/blurbackround" />
        <TextView
            android:fontFamily="@font/sansjale"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="OK"
            android:textColor="?attr/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>