<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trajectory">
    <LinearLayout
        android:background="?attr/backgroundColor2"
        android:padding="16dp"
        android:orientation="horizontal"
        android:id="@+id/lntrajectory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textColor="?attr/primaryTextColor"
            android:text="@string/strtrajectoryprof"
            android:textSize="40dp"
            android:id="@+id/profname"
            android:textStyle="bold"
            android:singleLine="false"
            android:fontFamily="@font/sansjale"
            android:layout_width="200dp"
            android:layout_height="40dp"/>

    </LinearLayout>
    <ScrollView
        android:layout_below="@id/lntrajectory"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/descriptiontrajectory"
            android:textSize="16dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@id/descriptiontrajectory"
            android:id="@+id/trajectoryperson"
            android:textSize="16dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvrecom"
            android:layout_below="@id/trajectoryperson"
            android:background="?attr/backgroundColor2"
            android:gravity="left"
            android:textSize="20dp"
            android:padding="16dp"
            android:text="@string/strrecommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trajectoryRecomendations"
            android:layout_below="@id/tvrecom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvdcos"
            android:layout_below="@id/trajectoryRecomendations"
            android:background="?attr/backgroundColor2"
            android:gravity="left"
            android:textSize="20dp"
            android:padding="16dp"
            android:text="@string/strdocs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trajectoryDocs"
            android:layout_below="@id/tvdcos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>