<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#00000000"
    app:cardCornerRadius="16dp"
    android:layout_width="match_parent"
    android:layout_height="311dp">
    <com.github.mmin18.widget.RealtimeBlurView
        android:layout_width="match_parent"
        android:layout_height="311dp"
        app:realtimeBlurRadius="25dp"
        app:realtimeOverlayColor="?attr/blurbackround" />
    <RelativeLayout
        android:layout_gravity="center"
        android:background="#00000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:theme="@style/MyEditTextTheme"
        android:layout_margin="16dp"
        android:id="@+id/etemail"
        android:textColorHint="?attr/secondaryTextColor"
        android:hint="@string/email"
        android:textColor="?attr/primaryTextColor"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:theme="@style/MyEditTextTheme"
        android:inputType="textPassword"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/etpassword"
        android:layout_below="@+id/etemail"
        android:textColorHint="?attr/secondaryTextColor"
        android:hint="@string/strpassword"
        android:textColor="?attr/primaryTextColor"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/etpassword"
        android:id="@+id/btnlog"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        style="@style/AppCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">
        <TextView
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/btnlogin"
            android:textColor="?attr/cardTextColor"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/btnlog"
        android:id="@+id/divider2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal" />
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/stror"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout

        android:layout_below="@+id/divider2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:id="@+id/btnlogingoogle"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            style="@style/AppCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">
            <ImageView
                android:padding="16dp"
                android:layout_gravity="center"
                android:src="@drawable/googleg_standard_color_18"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>